# quirk-generator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
quirk_generator/: cli.py  generate_quirk.py  locate_matches.py  utils.py
quirk_generator/templates/: endpoints_template.txt  imports_template.j2  imports_template.txt  quirk_template.j2  quirk_template.txt
sample_files/: diagnostics.json  signature.json
